--- a/dvc.yaml
+++ b/dvc.yaml
@@ -11,9 +11,26 @@ stages:
   split_data:
     cmd: python src/split_data.py --config=params.yaml
     deps:
-    - src/get_data.py
+    - src/train_and_evaluate.py
     - src/split_data.py
     - data/raw/winequality.csv
     outs:
     - data/processed/train_winequality.csv
     - data/processed/test_winequality.csv
+
+  train_and_evaluate:
+    cmd: python src/train_and_evaluate.py
+    deps:
+    - src/get_data.py
+    - data/processed/train_winequality.csv
+    - data/processed/train_winequality.csv
+    params:
+    - estimators.ElasticNet.params.alpha
+    - estimators.ElasticNet.params.l1_ratio
+    metrics:
+    - report/params.json:
+        cache: false
+    - report/scores.json:
+        cache: false
+    outs:
+    - saved_models/model.joblib
